--- a/force-app/main/default/aura/KanbanBoard/KanbanBoard.css
+++ b/force-app/main/default/aura/KanbanBoard/KanbanBoard.css
@@ -1,22 +1,37 @@
-.THIS .slds-item {
-    border: 1px solid #d8dde6;
-    border-radius: 0.25rem;
-    background-clip: padding-box;
-    padding: 0.45rem;
-    margin: 0.25rem;
-}
-.THIS .stageContainer{
+.THIS.stageContainer {
     float: left;
-    border: 2px solid #d8dde6;
-    margin: 0.05rem;
-    border-radius: .25rem;
-}
-.THIS .slds-page-header__title {
-    padding: 0rem 0.5rem;
-    background: #f7f9fb;
+    margin: 5px;
+    min-width: 200px;
+    max-width: 200px;
+    background-color: rgba(255, 255, 255, 0.726);
 }
 
+.THIS.buttonsBar {
+    background-color: rgba(255, 255, 255, 0.726);
+}
 
-.THIS .dropZone{
-    min-height: 25rem;
+.THIS .waves-effect {
+    margin: 5px;
+}
+
+.THIS .syncTitle {
+    font-weight: bold;
+    font-size: medium;
+}
+
+.THIS .stageTitle {
+    text-align: left;
+    margin-left: 5px;
+    font-weight: bold;
+}
+
+.THIS .card {
+    margin: 5px;
+    min-height: 60px;
+    max-height: 60px;
+    text-align: left;
+}
+
+.THIS .card-title {
+    margin-left: 5px;
 }
