--- a/force-app/main/default/aura/CreateCardForm/CreateCardForm.cmp
+++ b/force-app/main/default/aura/CreateCardForm/CreateCardForm.cmp
@@ -1,8 +1,6 @@
 <aura:component>
     <aura:attribute name="fields" type="String[]" default="['Name', 'Assignee__c', 'Due_Date__c', 'Description__c']"/>
-    <aura:attribute name="statusName" type="String"/>
-    <aura:attribute name="statusPosition" type="String"/>
-    <aura:attribute name="cardPosition" type="Integer"/>
+    <aura:attribute name="fieldValues" type="Object"/>
 
     <aura:registerEvent name="cardCreated" type="c:CardCreated"/>
 
