--- a/force-app/main/default/aura/CreateCardForm/CreateCardForm.css
+++ b/force-app/main/default/aura/CreateCardForm/CreateCardForm.css
@@ -1,2 +1,32 @@
-.THIS {
+.THIS .slds-button.slds-button_neutral {
+    text-decoration: none;
+    color: #fff;
+    background-color: #26a69a;
+    text-align: center;
+    letter-spacing: .5px;
+    -webkit-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    cursor: pointer;
+}
+
+.THIS .slds-button.slds-button_brand {
+    text-decoration: none;
+    color: #fff;
+    background-color: #26a69a;
+    text-align: center;
+    letter-spacing: .5px;
+    -webkit-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    cursor: pointer;
+    border-color: #26a69a;
+}
+
+.THIS .slds-button.slds-button_neutral:hover {
+    background-color: #2bbbad;
+    color: blue;
+}
+
+.THIS .slds-button.slds-button_brand:hover {
+    background-color: #2bbbad;
+    color: blue;
 }
