--- a/force-app/main/default/aura/CardDetailForm/CardDetailForm.cmp
+++ b/force-app/main/default/aura/CardDetailForm/CardDetailForm.cmp
@@ -1,5 +1,5 @@
 <aura:component>
-    <aura:attribute name="recordId" type="String"/>
+    <aura:attribute name="recordId" type="String" access="private"/>
 
     <lightning:recordViewForm objectApiName="Card__c" recordId="{!v.recordId}">
         <div class="slds-grid">
