--- a/force-app/main/default/aura/CreateCardForm/CreateCardForm.cmp
+++ b/force-app/main/default/aura/CreateCardForm/CreateCardForm.cmp
@@ -1,8 +1,8 @@
 <aura:component>
-    <aura:attribute name="fields" type="String[]" default="['Name', 'Assignee__c', 'Due_Date__c', 'Description__c']"/>
-    <aura:attribute name="fieldValues" type="Object"/>
-    <aura:attribute name="stateType" type="String" required="true"/>
-    <aura:attribute name="msg" type="String" required="true"/>
+    <aura:attribute name="fields" type="String[]" default="['Name', 'Assignee__c', 'Due_Date__c', 'Description__c']" access="public"/>
+    <aura:attribute name="fieldValues" type="Object" access="public"/>
+    <aura:attribute name="stateType" type="String" required="true" access="private"/>
+    <aura:attribute name="msg" type="String" required="true" access="private"/>
 
     <aura:registerEvent name="cardCreated" type="c:CardCreated"/>
 
