--- a/force-app/main/default/aura/EditCardForm/EditCardForm.cmp
+++ b/force-app/main/default/aura/EditCardForm/EditCardForm.cmp
@@ -8,7 +8,8 @@
     <lightning:recordEditForm aura:id="editRecordForm"
         objectApiName="Card__c"
         recordId="{!v.recordId}"
-        onsubmit="{!c.handleSubmit}">
+        onsubmit="{!c.handleSubmit}"
+        onsuccess="{!c.handleSave}">
         <div class="slds-grid">
             <div class="slds-col slds-size_1-of-2">
                 <lightning:inputField aura:id="nameField" fieldName="Name"/>
